--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <main>
     <h1>Hello from Angular 2 App with Webpack</h1>
-    <my-item>Hello, </my-item>
+    <my-item>
+      <span class="name">Name is </span>
+      <span class="fetch">Fetch is </span>
+      <span class="ob">Observe is </span>
+    </my-item>
 </main>
